Return a dryer code

--- a/dry/index.html
+++ b/dry/index.html
@@ -15,16 +15,20 @@
   </section>
 
 
-  <button id="button-red">
+  <button id="button-red" class="js-button">
     red
   </button>
 
-  <button id="button-blue">
+  <button id="button-blue" class="js-button">
     blue
   </button>
 
-  <button id="button-yellow">
+  <button id="button-yellow" class="js-button">
     yellow
+  </button>
+
+  <button id="button-green" class="js-button">
+    green
   </button>
 
 </body>
