Create an example for Carlotta API lesson

--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-  <section>
+  <section id="js-canvas" class="canvas">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta amet totam dolorum consequatur iusto obcaecati repudiandae
-      ab aliquam quia maiores quam veritatis, accusantium voluptatum beatae a iste. Ab, officiis sed?
-      <!-- <time>12:00</time> -->
+      <time>
+        <span id="js-hour">12</span>
+        <span class="counter">:</span>
+        <span id="js-minute">00</span>
+      </time>
     </p>
   </section>
 
