--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -13,14 +13,19 @@
 
 <body>
   <section id="js-canvas" class="canvas">
-    <p>
-      <time>
-        <span id="js-hour">12</span>
-        <span class="counter">:</span>
-        <span id="js-minute">00</span>
-      </time>
-    </p>
+    <article>
+      <h1 id="js-place">...</h1>
+      <h2 id="js-weather">...</h2>
+      <p>
+        <time>
+          <span id="js-hour">12</span>
+          <span class="counter">:</span>
+          <span id="js-minute">00</span>
+        </time>
+      </p>
   </section>
+
+  </article>
 
 </body>
 
