Add pulse animation

--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -14,9 +14,8 @@
 <body>
   <section>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta amet totam dolorum consequatur iusto obcaecati repudiandae
-      ab aliquam quia maiores quam veritatis, accusantium voluptatum beatae a iste. Ab, officiis sed?
-      <!-- <time>12:00</time> -->
+      <time>12
+        <span class="pulse">:</span>00</time>
     </p>
   </section>
 
