Render hours and minutes

--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -14,8 +14,11 @@
 <body>
   <section>
     <p>
-      <time>12
-        <span class="pulse">:</span>00</time>
+      <time>
+        <span id="js-hour">12</span>
+        <span class="pulse">:</span>
+        <span id="js-minute">00</span>
+      </time>
     </p>
   </section>
 
