Render bg image

--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <section>
+  <section id="js-canvas" class="canvas">
     <p>
       <time>
         <span id="js-hour">12</span>
