Render localtion and weather

--- a/splash-page/index.html
+++ b/splash-page/index.html
@@ -13,13 +13,17 @@
 
 <body>
   <section id="js-canvas" class="canvas">
-    <p>
-      <time>
-        <span id="js-hour">12</span>
-        <span class="pulse">:</span>
-        <span id="js-minute">00</span>
-      </time>
-    </p>
+    <article>
+      <h1 id="js-place">...</h1>
+      <h2 id="js-weather">...</h2>
+      <p>
+        <time>
+          <span id="js-hour">12</span>
+          <span class="pulse">:</span>
+          <span id="js-minute">00</span>
+        </time>
+      </p>
+    </article>
   </section>
 
 </body>
