--- a/splash-page-carlotta/index.html
+++ b/splash-page-carlotta/index.html
@@ -12,7 +12,7 @@
 </head>   
 
 <body>
-    <section>
+    <section id='js-canvas' class='canvas'>
         <article>
             <h1>...</h1>
             <h2>...</h2>
