render weather and place

--- a/splash-page-carlotta/index.html
+++ b/splash-page-carlotta/index.html
@@ -14,8 +14,8 @@
 <body>
     <section id='js-canvas' class='canvas'>
         <article>
-            <h1>...</h1>
-            <h2>...</h2>
+            <h1 id='js-place'>...</h1>
+            <h2 id='js-weather'>...</h2>
         <p>
             <time>
                 <span id='js-hours'>12</span>
