--- a/splash-page-carlotta/index.html
+++ b/splash-page-carlotta/index.html
@@ -8,23 +8,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
 </head>   
 
 <body>
     <section id='js-canvas' class='canvas'>
         <article>
-            <h1 id='js-place'>...</h1>
-            <h2 id='js-weather'>...</h2>
-        <p>
-            <time>
-                <span id='js-hours'>12</span>
-                <span class='pulse'>:</span>
-                <span id='js-minutes'>00</span>
-            </time>
-        </p>
-    </article>
+            <h1 id='js-place' class='pulse'>...</h1>
+            <h2 id='js-weather' class='pulse'>...</h2>
+            <p>
+                <time>
+                    <span id='js-hours'>12</span>
+                    <span class='pulse'>:</span>
+                    <span id='js-minutes'>00</span>
+                </time>
+            </p>
+        </article>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
