add other fonts to use

--- a/splash-page-carlotta/index.html
+++ b/splash-page-carlotta/index.html
@@ -7,6 +7,8 @@
   <title>Splash lab Carlotta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|BioRhyme+Expanded|Cabin+Sketch|Gloria+Hallelujah|Homemade+Apple|Indie+Flower|Josefin+Sans|Luckiest+Guy|Monoton|Orbitron|Pacifico|Press+Start+2P|Reenie+Beanie|Righteous|Rock+Salt|VT323" rel="stylesheet">
+  
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>   
 
