Render and toggle players on click

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -12,15 +12,15 @@
 <body>
   <section>
     <ul>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
-      <li class="js-board-item board-item"></li>
+      <li class="js-board-item board-item" data-cell="0"></li>
+      <li class="js-board-item board-item" data-cell="1"></li>
+      <li class="js-board-item board-item" data-cell="2"></li>
+      <li class="js-board-item board-item" data-cell="3"></li>
+      <li class="js-board-item board-item" data-cell="4"></li>
+      <li class="js-board-item board-item" data-cell="5"></li>
+      <li class="js-board-item board-item" data-cell="6"></li>
+      <li class="js-board-item board-item" data-cell="7"></li>
+      <li class="js-board-item board-item" data-cell="8"></li>
     </ul>
   </section>
 
