Evaluate if we have a winner and displayed

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -23,6 +23,9 @@
       <li class="js-board-item board-item" data-cell="8"></li>
     </ul>
   </section>
+  <aside id="js-winner-board" class="winner-board">
+    <h2>Winner</h2>
+  </aside>
 
   <script src="scripts/main.js"></script>
 </body>
