Render winner player

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -24,6 +24,7 @@
     </ul>
   </section>
   <aside id="js-winner-board" class="winner-board">
+    <h1 id="js-winner-player"></h1>
     <h2>Winner</h2>
   </aside>
 
