Create a clear button to erase the board

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -23,6 +23,9 @@
       <li class="js-board-item board-item" data-cell="8"></li>
     </ul>
   </section>
+  <aside>
+    <button id="js-clear-button">Clear Game</button>
+  </aside>
   <aside id="js-winner-board" class="winner-board">
     <h1 id="js-winner-player"></h1>
     <h2>Winner</h2>
