--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -7,6 +7,7 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +29,6 @@
   </aside>
   <aside id="js-winner-board" class="winner-board">
     <h1 id="js-winner-player"></h1>
-    <h2>Winner</h2>
   </aside>
 
   <script src="scripts/main.js"></script>
