--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,33 +4,38 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
+  <title>Tic Tac Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
 </head>
 
 <body>
-  <section>
-    <ul>
-      <li class="js-board-item board-item" data-cell="0"></li>
-      <li class="js-board-item board-item" data-cell="1"></li>
-      <li class="js-board-item board-item" data-cell="2"></li>
-      <li class="js-board-item board-item" data-cell="3"></li>
-      <li class="js-board-item board-item" data-cell="4"></li>
-      <li class="js-board-item board-item" data-cell="5"></li>
-      <li class="js-board-item board-item" data-cell="6"></li>
-      <li class="js-board-item board-item" data-cell="7"></li>
-      <li class="js-board-item board-item" data-cell="8"></li>
-    </ul>
+  <section class='container'>
+    <section class='main-content'>
+      <h1>Tic Tac Toe!</h1>
+      <section class='main-game'>
+        <ul>
+          <li class="js-board-item board-item" data-cell="0"></li>
+          <li class="js-board-item board-item" data-cell="1"></li>
+          <li class="js-board-item board-item" data-cell="2"></li>
+          <li class="js-board-item board-item" data-cell="3"></li>
+          <li class="js-board-item board-item" data-cell="4"></li>
+          <li class="js-board-item board-item" data-cell="5"></li>
+          <li class="js-board-item board-item" data-cell="6"></li>
+          <li class="js-board-item board-item" data-cell="7"></li>
+          <li class="js-board-item board-item" data-cell="8"></li>
+        </ul>
+      </section>
+      <aside>
+        <button id="js-clear-button">Restart Game</button>
+      </aside>
+      <aside id="js-winner-board" class="winner-board">
+        <h2 id="js-winner-player"></h2>
+      </aside>
+    </section>
   </section>
-  <aside>
-    <button id="js-clear-button">Clear Game</button>
-  </aside>
-  <aside id="js-winner-board" class="winner-board">
-    <h1 id="js-winner-player"></h1>
-  </aside>
-
   <script src="scripts/main.js"></script>
 </body>
 
