change padding of button and winner board

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -31,7 +31,7 @@
       <aside>
         <button id="js-clear-button">Restart Game</button>
       </aside>
-      <aside id="js-winner-board">
+      <aside id="js-winner-board" class='winner-board'>
         <h2 id="js-winner-player"></h2>
       </aside>
     </section>
