--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -32,7 +32,7 @@
         <button id="js-clear-button">Restart Game</button>
       </aside>
       <aside id="js-winner-board" class='winner-board'>
-        <h2 id="js-winner-player"></h2>
+        <h2 id="js-winner-player" class='winner-player'></h2>
       </aside>
     </section>
   </section>
